# mood_tracker_bot

./: README.md  pyproject.toml
bot/: __main__.py
